# TE-MPE-CB_code_excercises

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg
.github/workflows/: python-package.yml
solutions/: entry_points.py
solutions/exercise_one/: __init__.py  exercise_one.py
solutions/exercise_two/: __init__.py  __main__.py  exercise_two.py
tests/: conftest.py  test_exercise_two.py
tests/test_jsons/: cyclic_import.json  cyclic_import_worst_case_fail.json  cyclic_import_worst_case_pass.json  deps3.json  invalid_json.json  list_json.json  missing_package.json  self_import.json  simple_package.json
