[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["solutions"]

[project]
name = "TE_MPE_CB_code_interview"
version = "0.0.1"
authors = [
    {name = "Twardzik Tomas", email = "twardziktom@gmail.com"}
]
description = "An example solution to CERN's CB section code interview."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    'importlib-metadata; python_version<"3.8"',
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
detect-duplicate = "entry_points:detect_duplicate"
exercise-two = "exercise_two:show_dependency_graph"
show-dependency = "entry_points:dependency_graph"