[metadata]
name = TE_MPE_CB_code_interview
version = 0.5.0
description = An example solution to CERNs CB section code interview.
author = Tomas Twardzik
author_email = twardziktom@gmail.com
long_description = README.md
license = GNUv3
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3

[options]
package_dir = 
    =solutions
packages =
    exercise_two
zip_safe = False
python_requires = >=3.10
install_requires = 
    click>=8.1

[options.entry_points]
console_scripts =
    detect-duplicate = entry_points:detect_duplicate 
    exercise-two = exercise_two:show_dependency_graph 
    show-dependency = entry_points:dependency_graph

[options.extras_require]
testing =
    pytest>=7.4
    pytest-cov>=4.1
    mypy>=1.6
    flake8>=6

[options.package_data]
exercise_two= py.typed

[flake8]
max-line-length = 160